--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>HOLA!! ME LLAMO JULIO LOARTE</h1>
         <h2>FULL STACK DEVELOPER</h2>
         <p>Profesional titulado en la carrera de Ingeniería de Sistemas y Computo.<p>
-        <p>Con conocimientos en el desarrollo de aplicaciones y páginas Web, utilizando las herramientas acordes a la solución de la problemática presentada. Amante de la tecnología y la música, y me gusta compartir los conocimientos que adquiero en el día a día.</p>
+        <p>Con conocimientos en el desarrollo de aplicaciones y páginas Web. Amante de la tecnología y la música, y me gusta compartir los conocimientos adquiridos.</p>
         <button class="button">Cuéntame sobre tu idea</button>
     </section>
 </body>
