--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
+    <script defer src="js/index.js"></script>
     <title>JCreativos</title>
 </head>
 <body>
     <header>
         <div class="logo">Jcreativos</div>
-        <button class="nav-toggle"><i class="fas fa-bars"></i></button>
+        <button class="nav-toggle" aria-label="Abrir Menú"><i class="fas fa-bars"></i></button>
+        <ul class="nav-menu">
+            <li class="nav-menu-item"><a class="nav-menu-link nav-menu-link_active" href="">Home</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="">Sobre mi</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="">Portafolio</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="">Contacto</a></li>
+        </ul>
     </header>
     <section class="container">
         <section class="foto"></section>
