--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/mobil.css" media="only screen and (max-width: 900px)">
-    <link rel="stylesheet" href="./assets/css/desktop.css" media="screen and (min-width: 900px)" />
+    <link rel="stylesheet" href="./assets/css/mobil.css" media="only screen and (max-width: 1000px)">
+    <link rel="stylesheet" href="./assets/css/desktop.css" media="screen and (min-width: 1000px)" />
     <script src="https://kit.fontawesome.com/4b3f15bb31.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,9 @@
 <body>
     <header>
         <div class="logo">Julio Loarte</div>
+        <div class="cuadro01"></div>
+        <div class="cuadro02"></div>
+        <div class="cuadro03"></div>
         <button class="nav-toggle" aria-label="Abrir Menú"><i class="fas fa-bars"></i></button>
         <ul class="nav-menu">
             <li class="nav-menu-item"><a class="nav-menu-link nav-menu-link_active" href="">Home</a></li>
@@ -41,6 +44,11 @@
             </ul>
         </nav>
     </section>
+    <footer>
+        <div class="cuadrof01"></div>
+        <div class="cuadrof02"></div>
+        <div class="cuadrof03"></div>
+    </footer>
     <script defer src="./assets/js/index.js"></script>
 </body>
 </html>
