--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/mobil.css" media="only screen and (max-width: 1000px)">
-    <link rel="stylesheet" href="./assets/css/desktop.css" media="screen and (min-width: 1000px)" />
+    <link rel="stylesheet" href="./assets/css/styles.css"/>
     <script src="https://kit.fontawesome.com/4b3f15bb31.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,10 +19,10 @@
         <div class="cuadro03"></div>
         <button class="nav-toggle" aria-label="Abrir Menú"><i class="fas fa-bars"></i></button>
         <ul class="nav-menu">
-            <li class="nav-menu-item"><a class="nav-menu-link nav-menu-link_active" href="">Home</a></li>
-            <li class="nav-menu-item"><a class="nav-menu-link" href="">Sobre mi</a></li>
-            <li class="nav-menu-item"><a class="nav-menu-link" href="">Portafolio</a></li>
-            <li class="nav-menu-item"><a class="nav-menu-link" href="">Contacto</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link nav-menu-link_active" href="index.html">Home</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="sobremi.html">Sobre mi</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="portafolio.html">Portafolio</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="contacto.html">Contacto</a></li>
         </ul>
     </header>
     <section class="container">
@@ -37,10 +36,10 @@
         </section>
         <nav class="menuright">
             <ul>
-                <li class="menuright__button menuright__button--activo"><i class="fas fa-home"></i></li>
-                <li class="menuright__button"><i class="fas fa-user"></i></li>
-                <li class="menuright__button"><i class="fas fa-briefcase"></i></li>
-                <li class="menuright__button"><i class="fas fa-envelope"></i></li>
+                <li class="menuright__button menuright__button--activo"><a href="index.html"><i class="fas fa-home"></i></a></li>
+                <li class="menuright__button"><a href="sobremi.html"><i class="fas fa-user"></i></a></li>
+                <li class="menuright__button"><a href="portafolio.html"><i class="fas fa-briefcase"></i></a></li>
+                <li class="menuright__button"><a href="contacto.html"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </nav>
     </section>
