Add Pagina Sobre mi - portafolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Julio Loarte</div>
+        <div class="logo">JULIO<span>LOARTE</span></div>
         <div class="cuadro01"></div>
         <div class="cuadro02"></div>
         <div class="cuadro03"></div>
