--- a/portafolio.html
+++ b/portafolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">sobre mi</div>
+        <div class="logo">MIS <span>PROYECTOS</span></div>
         <div class="cuadro01"></div>
         <div class="cuadro02"></div>
         <div class="cuadro03"></div>
@@ -26,8 +26,10 @@
         </ul>
     </header>
     <section class="container">
-        <section class="portafolio"><a href=""></a>
-            <div class="portafolio__card card-01"></div>
+        <section class="portafolio">
+            <div class="portafolio__card card-01">
+               <a href="https://www.gesrem.julioloarte.com/" target="_blank"><span>Sistema de Planillas - Laravel y Vue</span></a>
+            </div>
             <div class="portafolio__card"></div>
             <div class="portafolio__card"></div>
         </section>
