--- a/sobremi.html
+++ b/sobremi.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Julio Loarte</div>
+        <div class="logo">ABOUT<span>ME</span></div>
         <div class="cuadro01"></div>
         <div class="cuadro02"></div>
         <div class="cuadro03"></div>
@@ -26,14 +26,103 @@
         </ul>
     </header>
     <section class="container">
-        <!-- <section class="foto"></section>
-        <section class="presentacion">
-            <h1>HOLA!! ME LLAMO JULIO LOARTE</h1>
-            <h2>FULL STACK DEVELOPER</h2>
-            <p>Profesional titulado en la carrera de Ingeniería de Sistemas y Computo.<p>
-            <p>Con conocimientos en el desarrollo de aplicaciones y páginas Web. Amante de la tecnología y la música, y me gusta compartir los conocimientos adquiridos.</p>
-            <button class="button">Cuéntame sobre tu idea</button>
-        </section> -->
+        <section class="personalinfo">
+            <h2>PERSONAL INFOS</h2>
+            <article class="personalinfo__detalle">
+                <section class="personalinfo__detalle--left">
+                    <h3>Firsh Name:</h3>
+                    <p>Julio</p>
+                    <h3>Last Name:</h3>
+                    <p>Loarte</p>
+                    <h3>Nationality</h3>
+                    <p>Perú</p>
+                    <h3>Freelance</h3>
+                    <p>Available</p>
+                </section>
+                <section class="personalinfo__detalle--right">
+                    <h3>Adderss:</h3>
+                    <p>juliolh06</p>
+                    <h3>Phone:</h3>
+                    <p>+51966936890</p>
+                    <h3>Email:</h3>
+                    <p>juliolh06@gmail.com</p>
+                    <h3>Languaje:</h3>
+                    <p>English Basic</p>
+                </section>
+            </article>
+            <button class="button">DOWNLOAD CV</button>
+        </section>
+        <div class="container-skills-total">
+        <h2>MY SKILLS</h2>
+        <section class="container-skills">
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/html5.svg" alt="Elephant at sunset">
+                </figure>
+                <span>HTML</span>
+            </section>
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/css3.svg" alt="Elephant at sunset">
+                </figure>
+                <span>CSS</span>
+            </section>
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/javascript.svg" alt="Elephant at sunset">
+                </figure>
+                <span>Java Script</span>
+            </section>
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/MySQL.svg" alt="Elephant at sunset">
+                </figure>
+                <span>MySql</span>
+            </section>
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/laravel.svg" alt="Elephant at sunset">
+                </figure>
+                <span>Laravel</span>
+            </section>
+        </section>
+    </div>
+        <section class="container-education">
+            <h2>EDUCATION</h2>
+            <article class="education">
+                <div class="linea"></div>
+                <div class="circulo"></div>
+                <span>2013-2018</span>
+                <h3>INGENIERIA DE SISTEMAS Y COMPUTO</h3>
+                <p>UNIVERSIDAD INCA GARCILASO DE LA VEGA</p>
+            </article>
+            <article class="education">
+                <div class="linea"></div>
+                <div class="circulo"></div>
+                <span>2013-2018</span>
+                <h3>INGENIERIA DE SISTEMAS Y COMPUTO</h3>
+                <p>UNIVERSIDAD INCA GARCILASO DE LA VEGA</p>
+            </article>
+        </section>
+        <section class="container-education">
+            <h2>EXPERIENCE</h2>
+            <article class="education">
+                <div class="linea"></div>
+                <div class="circulo"></div>
+                <span>2013-2018</span>
+                <h3>WEB DEVELOPER</h3>
+                <h3>EMPRESA</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus scelerisque diam ac.</p>
+            </article>
+            <article class="education">
+                <div class="linea"></div>
+                <div class="circulo"></div>
+                <span>2013-2018</span>
+                <h3>WEB DEVELOPER</h3>
+                <h3>EMPRESA</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus scelerisque diam ac.</p>
+            </article>
+        </section>
         <nav class="menuright">
             <ul>
                 <li class="menuright__button"><a href="index.html"><i class="fas fa-home"></i></a></li>
