--- a/sobremi.html
+++ b/sobremi.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">ABOUT<span>ME</span></div>
+        <div class="logo">SOBRE<span>MÍ</span></div>
         <div class="cuadro01"></div>
         <div class="cuadro02"></div>
         <div class="cuadro03"></div>
@@ -27,33 +27,29 @@
     </header>
     <section class="container">
         <section class="personalinfo">
-            <h2>PERSONAL INFOS</h2>
+            <h2>INFORMACIÓN PERSONAL</h2>
             <article class="personalinfo__detalle">
                 <section class="personalinfo__detalle--left">
-                    <h3>Firsh Name:</h3>
+                    <h3>Nombres:</h3>
                     <p>Julio</p>
-                    <h3>Last Name:</h3>
-                    <p>Loarte</p>
-                    <h3>Nationality</h3>
+                    <h3>Apellidos:</h3>
+                    <p>Loarte Huerto</p>
+                    <h3>Nacionalidad</h3>
                     <p>Perú</p>
-                    <h3>Freelance</h3>
-                    <p>Available</p>
                 </section>
                 <section class="personalinfo__detalle--right">
-                    <h3>Adderss:</h3>
-                    <p>juliolh06</p>
-                    <h3>Phone:</h3>
+                    <h3>Teléfono:</h3>
                     <p>+51966936890</p>
                     <h3>Email:</h3>
                     <p>juliolh06@gmail.com</p>
-                    <h3>Languaje:</h3>
+                    <h3>Idioma:</h3>
                     <p>English Basic</p>
                 </section>
             </article>
             <button class="button">DOWNLOAD CV</button>
         </section>
         <div class="container-skills-total">
-        <h2>MY SKILLS</h2>
+        <h2>MIS HABILIDADES</h2>
         <section class="container-skills">
             <section class="skill">
                 <figure>
@@ -85,10 +81,22 @@
                 </figure>
                 <span>Laravel</span>
             </section>
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/github.svg" alt="Elephant at sunset">
+                </figure>
+                <span>GitHub</span>
+            </section>
+            <section class="skill">
+                <figure>
+                    <img src="./assets/img/vue.svg" alt="Elephant at sunset">
+                </figure>
+                <span>Vue</span>
+            </section>
         </section>
     </div>
         <section class="container-education">
-            <h2>EDUCATION</h2>
+            <h2>EDUCACIÓN</h2>
             <article class="education">
                 <div class="linea"></div>
                 <div class="circulo"></div>
@@ -99,28 +107,35 @@
             <article class="education">
                 <div class="linea"></div>
                 <div class="circulo"></div>
-                <span>2013-2018</span>
-                <h3>INGENIERIA DE SISTEMAS Y COMPUTO</h3>
-                <p>UNIVERSIDAD INCA GARCILASO DE LA VEGA</p>
+                <span>ABRIL - AGOSTO 2020</span>
+                <h3>DESARROLLO DE APLICACIONES WEB CON LARAVEL + VUE.JS</h3>
+                <p>EDESCE</p>
+            </article>
+            <article class="education">
+                <div class="linea"></div>
+                <div class="circulo"></div>
+                <span>2021 - ACTUALIDAD</span>
+                <h3>ESCUELA DE DESARROLLO WEB</h3>
+                <p>PLATZI</p>
             </article>
         </section>
         <section class="container-education">
-            <h2>EXPERIENCE</h2>
+            <h2>EXPERIENCIA</h2>
             <article class="education">
                 <div class="linea"></div>
                 <div class="circulo"></div>
-                <span>2013-2018</span>
-                <h3>WEB DEVELOPER</h3>
-                <h3>EMPRESA</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus scelerisque diam ac.</p>
+                <span>2015-Actualidad</span>
+                <h3>ANALISTA EN PLANILLAS</h3>
+                <h3>UGEL 07 - San Borja</h3>
+                <p>Compromiso y Carga de las planillas de remuneraciones en el Sistema de Administración Financiera - SIAF, desarrolle e implementación de la aplicación para el control de remuneraciones del personal CAS.</p>
             </article>
             <article class="education">
                 <div class="linea"></div>
                 <div class="circulo"></div>
-                <span>2013-2018</span>
-                <h3>WEB DEVELOPER</h3>
-                <h3>EMPRESA</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus scelerisque diam ac.</p>
+                <span>Actualidad</span>
+                <h3></h3>
+                <h3>FREELANCER</h3>
+                <p>Proyectos independientes</p>
             </article>
         </section>
         <nav class="menuright">
