--- a/index.html
+++ b/index.html
@@ -13,40 +13,26 @@
 </head>
 <body>
     <header>
-        <div class="logo">JULIO<span>LOARTE</span></div>
-        <div class="cuadro01"></div>
-        <div class="cuadro02"></div>
-        <div class="cuadro03"></div>
+        <div class="logo">JL</div>
         <button class="nav-toggle" aria-label="Abrir Menú"><i class="fas fa-bars"></i></button>
         <ul class="nav-menu">
             <li class="nav-menu-item"><a class="nav-menu-link nav-menu-link_active" href="index.html">Home</a></li>
-            <li class="nav-menu-item"><a class="nav-menu-link" href="sobremi.html">Sobre mi</a></li>
-            <li class="nav-menu-item"><a class="nav-menu-link" href="portafolio.html">Portafolio</a></li>
-            <li class="nav-menu-item"><a class="nav-menu-link" href="contacto.html">Contacto</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="#">Sobre mi</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="#">Portafolio</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-link" href="#">Contacto</a></li>
         </ul>
     </header>
     <section class="container">
-        <section class="foto"></section>
-        <section class="presentacion">
-            <h1>HOLA!! ME LLAMO JULIO LOARTE</h1>
-            <h2>FULL STACK DEVELOPER</h2>
-            <p>Profesional titulado en la carrera de Ingeniería de Sistemas y Computo.<p>
-            <p>Con conocimientos en el desarrollo de aplicaciones y páginas Web. Amante de la tecnología y la música, y me gusta compartir los conocimientos adquiridos.</p>
-            <button class="button">Cuéntame sobre tu idea</button>
+        <section class="home">
+            <section class="home__titulo">
+                <h1>JULIO LOARTE HUERTO</h1>
+                <h2>Full Stack Developer</h2>
+                <button class="button">Portafolio</button>
+            </section>
         </section>
-        <nav class="menuright">
-            <ul>
-                <li class="menuright__button menuright__button--activo"><a href="index.html"><i class="fas fa-home"></i></a></li>
-                <li class="menuright__button"><a href="sobremi.html"><i class="fas fa-user"></i></a></li>
-                <li class="menuright__button"><a href="portafolio.html"><i class="fas fa-briefcase"></i></a></li>
-                <li class="menuright__button"><a href="contacto.html"><i class="fas fa-envelope"></i></a></li>
-            </ul>
-        </nav>
     </section>
     <footer>
-        <div class="cuadrof01"></div>
-        <div class="cuadrof02"></div>
-        <div class="cuadrof03"></div>
+       <p>2021 - Desarrollado por Julio Loarte Huerto</p> 
     </footer>
     <script defer src="./assets/js/index.js"></script>
 </body>
