--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
                 <button class="button">Portafolio</button>
             </section>
         </section>
+        <section class="contacto">
+            <form class="contacto__form">
+                <input class="contacto__form--input" type="text" placeholder="Name">
+                <input class="contacto__form--input" type="text" placeholder="Email">
+                <textarea class="contacto__form--input" name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                <button class="contacto__form--button">Enviar Mensaje</button>
+            </form>
+            <section class="contacto__social">
+
+            </section>
+        </section>
     </section>
     <footer>
        <p>2021 - Desarrollado por Julio Loarte Huerto</p> 
