--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             </section>
         </section>
         <section class="contacto">
-            <form class="contacto__form">
-                <input class="contacto__form--input" type="text" placeholder="Name">
-                <input class="contacto__form--input" type="text" placeholder="Email">
+            <form class="contacto__form" action="https://formsubmit.co/juliolh06@gmail.com" method="POST">
+                <input class="contacto__form--input" type="text" name="name" placeholder="Name" required>
+                <input class="contacto__form--input" type="email" name="email" placeholder="Email" required>
                 <textarea class="contacto__form--input" name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
                 <button class="contacto__form--button">Enviar Mensaje</button>
             </form>
