--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="home__titulo">
                 <h1>JULIO LOARTE HUERTO</h1>
                 <h2>Full Stack Developer</h2>
-                <button class="button">Portfolio</button>
+                <button class="button"><a href="#portfolio">Portfolio</a></button>
             </section>
         </section>
         <section class="aboutme" id="aboutme">
@@ -48,23 +48,28 @@
             <div class="titulo_bloque">Portfolio</div>
             <section class="portafolio__central">
                 <section class="portafolio__item">
-                    <img src="./assets/img/gesrem.jpg" alt="">
+                    <a href="https://gesrem.julioloarte.com/" target="_blank"><img src="./assets/img/gesrem.jpg" alt=""></a>
                     <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
+                    <a href="https://www.julioloarte.com/proyectos/road2blog/" target="_blank"><img src="./assets/img/road2dev.jpg" alt=""></a>
+                    <section class="portafolio_description"><span>Road2Blog</span><span>HTML+CSS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
+                    <a href="https://www.julioloarte.com/proyectos/juego-nave-css/" target="_blank"><img src="./assets/img/starwars.jpg" alt=""></a>
+                    <section class="portafolio_description"><span>Juego StarWars</span><span>HTML+CSS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
+                    <a href="https://www.julioloarte.com/proyectos/parallax-css/" target="_blank"><img src="./assets/img/parallax.jpg" alt=""></a>
+                    <section class="portafolio_description"><span>Efecto Parallax</span><span>CSS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
+                    <a href="https://www.julioloarte.com/proyectos/calculosjs/" target="_blank"><img src="./assets/img/calculosjs.jpg" alt=""></a>
+                    <section class="portafolio_description"><span>Calculos</span><span>HTML+CSS+JS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
+                    <a href="https://www.julioloarte.com/proyectos/platzi-games/html/" target="_blank"><img src="./assets/img/platzigames.jpg" alt=""></a>
+                    <section class="portafolio_description"><span>Platzi Games</span><span>HTML+CSS</span></section>
                 </section>
             </section>
         </section>
@@ -118,23 +123,23 @@
         <section class="contact" id="contact">
             <div class="titulo_bloque">Contact</div>
             <section class="contact__container">
-                <form class="contact__form">
+                <!-- <form class="contact__form" id="form_contacto">
                     <input class="contact__form--input" type="text" name="name" placeholder="Name" required>
                     <input class="contact__form--input" type="email" name="email" placeholder="Email" required>
                     <textarea class="contact__form--input" name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
                     <button class="contact__form--button">Enviar Mensaje</button>
-                </form>
+                </form> -->
                 <section class="contact__social">
                     <section class="email-fono">
                         <p><i class="fas fa-phone-square-alt"></i> +51966936890</p>
                         <p><i class="fas fa-envelope-open"></i> juliolh06@gmail.com</p>
                     </section>
                     <section class="redes">
-                        <i class="fab fa-github"></i>
-                        <i class="fab fa-linkedin"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-instagram"></i>
+                       <a href="https://github.com/juliolh0686" target="_blank"><i class="fab fa-github"></i></a>
+                       <a href="https://www.linkedin.com/in/juliolh06/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                       <a href="https://twitter.com/Juliolh06" target="_blank"><i class="fab fa-twitter"></i></a>
+                       <a href="https://www.facebook.com/julio.loartehuerto/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                       <a href="https://www.instagram.com/juliolh06/" target="_blank"><i class="fab fa-instagram"></i></i></a>
                     </section>
                 </section>
             </section>
