--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css"/>
-    <script src="https://kit.fontawesome.com/662ea69c4c.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d729663d22.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
@@ -52,23 +52,23 @@
                     <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <a href="https://www.julioloarte.com/proyectos/road2blog/" target="_blank"><img src="./assets/img/road2dev.jpg" alt=""></a>
+                    <a href="https://juliolh0686.github.io/road2blog/" target="_blank"><img src="./assets/img/road2dev.jpg" alt=""></a>
                     <section class="portafolio_description"><span>Road2Blog</span><span>HTML+CSS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <a href="https://www.julioloarte.com/proyectos/juego-nave-css/" target="_blank"><img src="./assets/img/starwars.jpg" alt=""></a>
+                    <a href="https://juliolh0686.github.io/juego-nave-css/" target="_blank"><img src="./assets/img/starwars.jpg" alt=""></a>
                     <section class="portafolio_description"><span>Juego StarWars</span><span>HTML+CSS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <a href="https://www.julioloarte.com/proyectos/parallax-css/" target="_blank"><img src="./assets/img/parallax.jpg" alt=""></a>
+                    <a href="https://juliolh0686.github.io/parallax-css/" target="_blank"><img src="./assets/img/parallax.jpg" alt=""></a>
                     <section class="portafolio_description"><span>Efecto Parallax</span><span>CSS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <a href="https://www.julioloarte.com/proyectos/calculosjs/" target="_blank"><img src="./assets/img/calculosjs.jpg" alt=""></a>
+                    <a href="https://juliolh0686.github.io/ejercicios-javascript/" target="_blank"><img src="./assets/img/calculosjs.jpg" alt=""></a>
                     <section class="portafolio_description"><span>Calculos</span><span>HTML+CSS+JS</span></section>
                 </section>
                 <section class="portafolio__item">
-                    <a href="https://www.julioloarte.com/proyectos/platzi-games/html/" target="_blank"><img src="./assets/img/platzigames.jpg" alt=""></a>
+                    <a href="https://juliolh0686.github.io/Platzi-Games/html" target="_blank"><img src="./assets/img/platzigames.jpg" alt=""></a>
                     <section class="portafolio_description"><span>Platzi Games</span><span>HTML+CSS</span></section>
                 </section>
             </section>
@@ -135,7 +135,7 @@
                         <p><i class="fas fa-envelope-open"></i> juliolh06@gmail.com</p>
                     </section>
                     <section class="redes">
-                       <a href="https://github.com/juliolh0686" target="_blank"><i class="fab fa-github"></i></a>
+                       <a href="https://github.com/juliolh0686" target="_blank"><i class="fa-brands fa-github"></i></a>
                        <a href="https://www.linkedin.com/in/juliolh06/" target="_blank"><i class="fab fa-linkedin"></i></a>
                        <a href="https://twitter.com/Juliolh06" target="_blank"><i class="fab fa-twitter"></i></a>
                        <a href="https://www.facebook.com/julio.loartehuerto/" target="_blank"><i class="fab fa-facebook-square"></i></a>
