--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="home" id="home">
             <section class="home__titulo">
                 <h1>JULIO LOARTE HUERTO</h1>
-                <h2>Full Stack Developer</h2>
+                <h2>Ingeniero de Software</h2>
                 <button class="button"><a href="#portfolio">Portfolio</a></button>
             </section>
         </section>
