--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="titulo_bloque">Portfolio</div>
             <section class="portafolio__central">
                 <section class="portafolio__item">
-                    <a href="https://gesrem.julioloarte.com/" target="_blank"><img src="./assets/img/gesrem.jpg" alt=""></a>
-                    <section class="portafolio_description"><span>GesRem</span><span>Laravel</span></section>
+                    <a href="https://juliolh0686.github.io/authvue/" target="_blank"><img src="./assets/img/auth.png" alt=""></a>
+                    <section class="portafolio_description"><span>Auth</span><span>Vue.js</span></section>
                 </section>
                 <section class="portafolio__item">
                     <a href="https://juliolh0686.github.io/road2blog/" target="_blank"><img src="./assets/img/road2dev.jpg" alt=""></a>
@@ -131,7 +131,6 @@
                 </form> -->
                 <section class="contact__social">
                     <section class="email-fono">
-                        <p><i class="fas fa-phone-square-alt"></i> +51966936890</p>
                         <p><i class="fas fa-envelope-open"></i> juliolh06@gmail.com</p>
                     </section>
                     <section class="redes">
